[project]
name = "chowkidaar"
version = "0.1.0"
description = "A lightweight monitoring tool for real-time system and application performance tracking."
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "certifi==2024.2.2",
    "click==8.1.7",
    "discord.py==2.3.2",
    "dnspython==2.6.1",
    "email-validator==2.1.1",
    "exceptiongroup==1.2.1",
    "fastapi==0.111.0",
    "fastapi-cli==0.0.2",
    "frozenlist==1.4.1",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.0",
    "idna==3.7",
    "jinja2==3.1.4",
    "loguru==0.7.2",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "multidict==6.0.5",
    "numpy==1.26.4",
    "orjson==3.10.3",
    "pandas==2.2.2",
    "prometheus-client>=0.22.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.1",
    "pydantic-core==2.18.2",
    "pygments==2.17.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-logging-loki>=0.3.1",
    "python-multipart==0.0.9",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "rich==13.7.1",
    "shellingham==1.5.4",
    "six==1.16.0",
    "sniffio==1.3.1",
    "starlette==0.37.2",
    "typer==0.12.3",
    "typing-extensions==4.11.0",
    "tzdata==2024.1",
    "ujson==5.9.0",
    "uvicorn==0.29.0",
    "watchfiles==0.21.0",
    "websockets==12.0",
    "yarl==1.9.4",
]

[tool.uv]
lock-file = "uv.lock"
